[MSHARED-1455] Upgrade to Maven 4.0.0-rc-1 (#135)
Switch to Maven 4.0rc1 and code cleanups